--- a/.nullstone/config.yml
+++ b/.nullstone/config.yml
@@ -5,7 +5,7 @@ subdomains:
     module: nullstone/aws-autogen-subdomain
 
 apps:
-  aspnet:
+  laravel-quickstart:
     module: nullstone/aws-fargate-service
     vars:
       cpu: 256
